A few more improvements